tests/should_fail/unsupported/macros.rs
extern crate creusot_std;
use creusot_std::prelude::*;

#[logic(open)]
pub fn f() {
    panic!()
}
