tests/should_fail/unsupported/macros.stderr
error:  Unsupported expression: macros other than `pearlite!`, `proof_assert!` or `seq!` are unsupported in Pearlite code.
 --> macros.rs:6:5
  |
6 |     panic!()
  |     ^^^^^

error: aborting due to 1 previous error

